Added alert service for ui notifications Added util services to transforms datetime btw client and server Added test for sermon controller. Fixed new page scrolling to bottom issue
--server
added test for util model_to_dict
completed sermon save and publish

Second round of commit.

At this stage, couple of stuff have been done.

Facebook login/signup
Update profile view so select church, set gender and choose is pastor
Created views to create sermon, implemented bible search

Both server and client unit test is also in place.

--- a/app/dev/index.html
+++ b/app/dev/index.html
@@ -159,6 +159,9 @@
 <script src="vendors/bootstrap-growl/bootstrap-growl.min.js"></script>
 <script src="vendors/bower_components/lodash/lodash.min.js"></script>
 <script src="vendors/bower_components/ngWYSIWYG/js/wysiwyg.js"></script>
+<script src="vendors/bower_components/moment/min/moment.min.js"></script>
+
+
 <!--<script src="vendors/bower_components/angular-summernote/dist/angular-summernote.min.js"></script>-->
 
 <!--<script src="vendors/bower_components/ng-table/dist/ng-table.min.js"></script>-->
@@ -186,7 +189,10 @@
 <script src="module/services.js"></script>
 <script src="module/component/toggle-sidebar/toggle-sidebar-directive.js"></script>
 <script src="module/component/helper-directives/directives.js"></script>
+<script src="module/component/bible/bible-data.js"></script>
 <script src="module/component/bible/bible-service.js"></script>
+<script src="module/component/alert/alert-service.js"></script>
+<script src="module/component/util/util.js"></script>
 <!--<script src="js/templates.js"></script>-->
 <!--<script src="js/controllers/ui-bootstrap.js"></script>-->
 <!--<script src="js/controllers/table.js"></script>-->
