--- a/app/dev/module/shared/base.html
+++ b/app/dev/module/shared/base.html
@@ -1,4 +1,4 @@
-<header ng-hide="$state.current.data.hideHeader"
+<header ng-hide="$state.current.data.hideHeader" autoscroll="true"
         id="header" ng-include="'module/shared/header.html'" ng-controller="headerController as headerCtrl"
         data-current-skin="blue" style="height: 70px">
 
