--- a/app/dev/module/sermon/create.html
+++ b/app/dev/module/sermon/create.html
@@ -43,7 +43,7 @@
                             <div class="row m-b-20">
                                 <div class="col-sm-8">
                                     <h4 class="m-b-10">Sermon Date</h4>
-                                    <div class="row" ng-repeat="d in sermonCtrl.sermon.dates">
+                                    <div class="row" ng-repeat="d in sermonCtrl.sermon._dates">
                                         <div class="col-sm-6">
                                             <div class="form-group pull-left ">
                                                 <div class="fg-line">
@@ -55,13 +55,13 @@
                                                 <!--</small>-->
                                             </div>
 
-                                             <a ng-if="$index > 0" href ng-click="sermonCtrl.sermon.dates.splice($index, 1)">
+                                             <a ng-if="$index > 0" href ng-click="sermonCtrl.sermon._dates.splice($index, 1)">
                                                             <i class="f-18 p-l-10 p-t-15 zmdi zmdi-close zmdi-hc-fw"></i>
                                                         </a>
                                         </div>
 
                                     </div>
-                                        <a href data-ng-click="sermonCtrl.sermon.dates.push({'date': ''})">
+                                        <a href data-ng-click="sermonCtrl.sermon._dates.push({'date': ''})">
                                                     add another date</a>
                                 </div>
                             </div>
@@ -72,7 +72,13 @@
                                          ng-class="{'has-error': sermonCtrl.submitted && sermonCtrl.sermon.scriptures.length < 1}">
                                         <div class="fg-line">
                                             <!--<label>Main Scriptures</label>-->
-                                            <md-chips ng-model="sermonCtrl.sermon.scriptures">
+                                            <md-chips ng-model="sermonCtrl.sermon.scriptures"
+                                                      md-on-select="sermonCtrl.scriptureSelect($chip)"
+                                                      md-transform-chip="sermonCtrl.onScriptureAdd($chip)"
+                                                      placeholder="Enter a scripture"
+                                                      secondary-placeholder="e.g John 3:16"
+
+                                            >
                                             </md-chips>
                                         </div>
                                         <small style="color:#9e9e9e; float: right" class="help-block">Type a
@@ -163,9 +169,12 @@
                                             class="md-raised c-white bgm-blue">
                                         Publish
                                     </md-button>
-                                    <md-button class="md-raised">
+                                    <md-button
+                                             ng-click="sermonCtrl.save()"
+                                            class="md-raised">
                                         Save
                                     </md-button>
+                                    <a href="" class="btn btn-danger" data-growl-demo data-type="danger">Danger</a>
                                 </div>
 
                             </div>
