Implemented likes, unlike and view log for sermon.
Fixed bug in getting current user.

Fixed sermon study page, optimized for mobile.

--- a/app/dev/module/shared/header.html
+++ b/app/dev/module/shared/header.html
@@ -209,7 +209,7 @@
 </ul>
 
 <!-- when mobile, reduce width and float right -->
-<div id="top-search-wrap" style="position: relative; background: none;opacity:1;margin: 0 auto; width: 600px;">
+<div id="top-search-wrap"  class="hidden-xs" style="position: relative; background: none;opacity:1;margin: 0 auto; width: 600px;">
     <div class="tsw-inner" style="max-width: 500px">
         <!--<i id="top-search-close" class="zmdi zmdi-arrow-left" data-ng-click="hctrl.closeSearch()"></i>-->
         <input focus type="text"
