Update files for build

--- a/app/dev/index.html
+++ b/app/dev/index.html
@@ -28,7 +28,7 @@
     <link href="vendors/bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.min.css"
           rel="stylesheet">
     <link href="vendors/bower_components/ngWYSIWYG/css/editor.css" rel="stylesheet">
-    <link href="vendors/bower_components/chosen/chosen.min.css" rel="stylesheet">
+
 
     <!-- CSS -->
     <link href="css/app.min.1.css" rel="stylesheet" id="app-level">
@@ -144,15 +144,16 @@
 <script src="vendors/bower_components/angular-messages/angular-messages.min.js"></script>
 <script src="vendors/bower_components/angular-resource/angular-resource.min.js"></script>
 <script src="vendors/bower_components/angular-sanitize/angular-sanitize.min.js"></script>
-<script src="vendors/bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
 
 <!-- Angular Modules -->
+<script src="vendors/bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
 <script src="vendors/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="vendors/bower_components/angular-loading-bar/src/loading-bar.js"></script>
 <script src="vendors/bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
 <script src="vendors/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-<script src="vendors/bower_components/chosen/chosen.jquery.min.js"></script>
-<script src="vendors/bower_components/angular-chosen-localytics/chosen.js"></script>
+<script src="vendors/bower_components/angular-material/angular-material.js"></script>
+<!--<script src="vendors/bower_components/chosen/chosen.jquery.min.js"></script>-->
+<!--<script src="vendors/bower_components/angular-chosen-localytics/chosen.js"></script>-->
 
 <!-- Common Vendors -->
 <script src="vendors/bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
@@ -175,7 +176,7 @@
 <script src="vendors/bower_components/jquery-placeholder/jquery.placeholder.min.js"></script>
 <![endif]-->
 
-<script src="vendors/bower_components/angular-material/angular-material.js"></script>
+
 
 
 <!-- App level -->
