Implemented bible API with full support :)
Implemented feed api

Implemented email signup

Started work on home page (wall)

Updated post signup profile to include title for pastors.

Finished modal to read scripture on sermon study page

Refactored and fixed Validator class

--- a/app/dev/index.html
+++ b/app/dev/index.html
@@ -151,7 +151,7 @@
 <script src="vendors/bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
 <script src="vendors/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="vendors/bower_components/angular-material/angular-material.js"></script>
-<!--<script src="vendors/bower_components/chosen/chosen.jquery.min.js"></script>-->
+<script src="vendors/bootstrap-growl/bootstrap-growl.min.js"></script>
 <!--<script src="vendors/bower_components/angular-chosen-localytics/chosen.js"></script>-->
 
 <!-- Common Vendors -->
@@ -192,6 +192,7 @@
 <script src="module/services.js"></script>
 <script src="module/component/helper-directives/directives.js"></script>
 <script src="module/component/helper-filters/filters.js"></script>
+<script src="module/component/feed/feed-directive.js"></script>
 <script src="module/component/bible/bible-data.js"></script>
 <script src="module/component/bible/bible-service.js"></script>
 <script src="module/component/alert/alert-service.js"></script>
