--- a/app/dev/module/main/main.html
+++ b/app/dev/module/main/main.html
@@ -79,10 +79,31 @@
                             <div class="fg-line">
                                 <label class="control-label" for="email">Email</label>
                                 <input type="email"
-                                       ng-model="mainCtrl.user.last_name"
+                                       ng-model="mainCtrl.user.email"
                                        required class="form-control" id="email">
                             </div>
                         </div>
+
+                           <div class="input-group m-b-20">
+                            <!--<span class="input-group-addon"><i class="zmdi zmdi-email"></i></span>-->
+
+                            <div class="fg-line">
+                                <label class="control-label" for="email">Password</label>
+                                <input type="password"
+                                       ng-model="mainCtrl.user.password"
+                                       required class="form-control" id="password">
+                            </div>
+                        </div>
+                        <!--<div class="input-group m-b-20">-->
+                            <!--&lt;!&ndash;<span class="input-group-addon"><i class="zmdi zmdi-email"></i></span>&ndash;&gt;-->
+
+                            <!--<div class="fg-line">-->
+                                <!--<label class="control-label" for="email">Password</label>-->
+                                <!--<input type="email"-->
+                                       <!--ng-model="mainCtrl.user.email"-->
+                                       <!--required class="form-control" id="password2">-->
+                            <!--</div>-->
+                        <!--</div>-->
 
                         <div class="input-group m-b-20" style="width: 100%">
                             <button class="btn btn-block btn-primary waves-effect">Sign Up</button>
